# ship-ai

./: .env.example  .gitignore  .python-version  BACKFILL_CACHE_PARAMS.sql  CHATGPT_FALLBACK_IMPLEMENTATION.md  DIAGNOSTIC_QUERIES.sql  FIX_CACHE_PARAMS.sql  MIGRATION_COMPLETE.md  MIGRATION_NOTES.md  README.md  WORKFLOW_DOCUMENTATION.md  agent_graph.py  agent_tools.py  db.py  examples_data.py  llm_model.py  load_examples_data.py  main.py  models.py  prompts.py  pyproject.toml  query_results_f666c0b9-17fd-4796-8ae4-dcf8c86b9e75.csv  requirements.txt  run.py  start.sh  vector_store.py
.github/workflows/: deploy.yml
MD/: 80_PERCENT_LOGIC_WITHOUT_CACHING.md  AGENT_FLOW_DIAGRAM.md  DATABASE_CONNECTIONS.md  GROQ_401_TROUBLESHOOTING.md  HISTORICAL_TEMPERATURE_PATH_AND_FIX.md  MIGRATION_NOTES.md  REQUEST_TIMING_BREAKDOWN.md
app/: __init__.py  main.py
app/api/: __init__.py
app/config/: database.py  settings.py  table_metadata.py
app/constants/: vector_search_constants.py
app/controllers/: __init__.py  chat_controller.py  embeddings_controller.py  health_controller.py  vector_search_controller.py
app/core/: journey_calculator.py  prompts.py
app/helpers/: __init__.py  validators.py
app/models/: schemas.py
app/services/: cache_answer_service.py  (+3 more)
migrations/: add_minilm_cache_vector_index.sql  add_steps_time_to_ai_message_history.sql  add_vector_cache_columns.sql  create_ai_message_history.sql  insert_historical_temperature_example_and_rule.sql
scripts/: examples_data.py  journey_examples_data.py  load_examples_data.py
tests/: __init__.py  reponse.js
(+10 files in other folders)
