[project]
name = "ship-rag-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "langchain==0.3.25",
    "langchain-community==0.3.25",
    "langchain-core==0.3.65",
    "langchain-groq==0.2.1",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.23",
    "langgraph==0.2.45",
    "openai==1.86.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.11.7",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "sentence-transformers==2.7.0",
    "sqlalchemy==2.0.41",
    "torch==2.5.1",
    "uvicorn==0.34.3",
]
